Process comments for final revision

--- a/article/CoMixNL_revision2.tex
+++ b/article/CoMixNL_revision2.tex
@@ -122,7 +122,7 @@ In this paper we showed how the number of at-risk contacts per person outside th
 
 These findings are consistent with those found in the PiCo studies, even though the activity levels reported in the PiCo data are higher than in the CoMix data. The two studies differed in how the participants report their contacts. In the CoMix study contacts were reported individually with a lot of detail on location, duration, distance from contact, protection measures, etc. Also for the group contacts at work, school, or other places additional details were requested. In the PiCo study a participant reported the total number of contacts in specific age classes, which made reporting many contacts easier. This may partly explain the higher activity levels found in the PiCo study.
 
-We defined six activity levels and used ordinal regression to describe the contact behaviour of the study population. Other studies have used parametric distributions instead, with a maximum number of contacts \cite{Gimma_2022}. This maximum is necessary to yield the same trends in contact behaviour as our results (Supplementary Fig. S3) but also disregards the heavy tails of the distribution of number of contacts. For robustness we also reanalysed the data without distinction between age groups, but using participant age as a covariable over the full age range. Although not markedly different from the main results  (Supplementary Fig. S4), this analysis fails to capture any interactions between age group and calendar time.
+We defined six activity levels and used ordinal regression to describe the contact behaviour of the study population. Other studies have used parametric distributions instead, with a maximum number of contacts \cite{Gimma_2022}. This maximum is necessary to yield the same trends in contact behaviour as our results (Supplementary Fig. S3) but also disregards the heavy tails of the distribution of number of contacts. Like the ordinal regression model, machine learning models such as tree models and neural network models \cite{Hastie_2009} are agnostic methods. For this reason we would not expect qualitatively different results as all information is contained in the data. For robustness we also reanalysed the data without distinction between age groups, but using participant age as a covariable over the full age range. Although not markedly different from the main results  (Supplementary Fig. S4), this analysis fails to capture any interactions between age group and calendar time.
 
 Participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first participant round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distribution of the participant rounds over the survey rounds \cite{Gimma_2022}. Also, a lower frequency of the survey rounds may lead to a smaller fatigue effect, but this would conflict with the aim of monitoring contact behaviour close to real time.
 
