--- a/article/references.bib
+++ b/article/references.bib
@@ -132,6 +132,15 @@
   year = {2022}
 }
 
+@Book{Hastie_2009,
+  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  title = {The Elements of Statistical Learning},
+  publisher = {Springer},
+  year = {2009},
+  edition = {2},
+  url = {https://link.springer.com/book/10.1007/978-0-387-84858-7},
+}
+
 @Article{Hewitt_2020,
    Author="Hewitt, J.  and Carter, B.  and Vilches-Moraga, A.  and Quinn, T. J.  and Braude, P.  and Verduri, A.  and Pearce, L.  and Stechman, M.  and Short, R.  and Price, A.  and Collins, J. T.  and Bruce, E.  and Einarsson, A.  and Rickard, F.  and Mitchell, E.  and Holloway, M.  and Hesford, J.  and Barlow-Pay, F.  and Clini, E.  and Myint, P. K.  and Moug, S. J.  and McCarthy, K.  and Davey, C.  and Jones, S.  and Lunstone, K.  and Cavenagh, A.  and Silver, C.  and Telford, T.  and Simmons, R.  and Mutasem, T. E. J.  and Singh, S.  and Paxton, D.  and Harris, W.  and Galbraith, N.  and Bhatti, E.  and Edwards, J.  and Duffy, S.  and Bisset, C.  and Alexander, R.  and Garcia, M.  and Sangani, S.  and Kneen, T.  and Lee, T.  and McGovern, A.  and Guaraldi, G. ",
    Title="{{T}he effect of frailty on survival in patients with {C}{O}{V}{I}{D}-19 ({C}{O}{P}{E}): a multicentre, {E}uropean, observational cohort study}",
